--- a/WebScraper/WebScraper/App.config
+++ b/WebScraper/WebScraper/App.config
@@ -14,6 +14,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="RestaurantDbCtx" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=D:\GitHubSource\Source\Repos\PrototypeApps\PlaceNearYouApp\PlaceNearYouApp\App_Data\RestaurantsDb.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="RestaurantDbCtx" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\GitHubSource\Source\Repos\RestaurantsNearYou\WebScraper\WebScraper\App_Data\RestaurantsDb.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
